Update model training comment

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ local_settings.py
 # VS Code #
 .vscode/
 
-# Training Data
+# Ignore changes to training notebook
 /model_training/model_train.ipynb
 /model_training/sc_x.pkl
 /model_training/model_pkl
